
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_material_dark"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView android:text="@string/app_name"
        style="@style/TextoAsteroides"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/jugar"
        android:id="@+id/button2"
        android:layout_weight="0.05"
        android:onClick="mostrarPreferencias"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/configurar"
        android:id="@+id/button"
        android:onClick="lanzarPreferencias"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/acercade"
        android:id="@+id/button3"
        android:onClick="lanzarAcercaDe"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/salir"
        android:id="@+id/button4"
        android:onClick="salir"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/puntuaciones"
        android:id="@+id/button5"
        android:onClick="lanzarPuntuaciones"/>

</LinearLayout>
